--- a/style.css
+++ b/style.css
@@ -58,6 +58,25 @@
 .ex-6-img, .ex-7-img, .ex-8-img {
     width: 500px;
 }
+.ex-6-img:hover{
+    filter: grayscale();
+}
+
+.ex-7-img{
+    transition: 3s;    
+}
+.ex-7-img:hover{
+    filter: hue-rotate();
+}
+
+.ex-8-img{
+    transition: 2s;
+}
+
+.ex-8-img:hover{
+    filter: grayscale() saturate();
+    border-radius: 10%;
+}
 
 .ex-9-img {
     margin: 50px 100px;
