--- a/style.css
+++ b/style.css
@@ -75,16 +75,54 @@
 
 .ex-8-img:hover{
     filter: hue-rotate(200deg) saturate(200%);
-    border-radius: 10%;
+    border-radius: 5%;
 }
 
 .ex-9-img {
     margin: 50px 100px;
     width: 400px;
+    transition: all 5s;
 }
+
+.ex-9-img:hover{
+    filter: invert(100%) contrast(200%);
+    border-radius: 5%;
+    width: 200px;
+}
+
+
 .ex-10-icon {
     font-size: 60px;
+    animation: rotate linear;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
 }
+
+@keyframes rotate {
+
+    0%{
+        transform: rotate(0deg);
+    }
+
+    25%{
+        transform: rotate(90deg);
+    }
+
+    50%{
+        transform: rotate(180deg);
+    }
+
+    75%{
+        transform: rotate(270deg);
+    }
+
+    100%{
+        transform: rotate(360deg);
+    }
+
+
+}
+
 .ex-11-icon {
     font-size: 60px;
 }
