--- a/style.css
+++ b/style.css
@@ -105,6 +105,41 @@
     }
 
     25%{
+        transform: rotate(-90deg);
+    }
+
+    50%{
+        transform: rotate(-180deg);
+    }
+
+    75%{
+        transform: rotate(-270deg);
+    }
+
+    100%{
+        transform: rotate(-360deg);
+    }
+
+
+}
+
+.ex-11-icon {
+    font-size: 60px;
+    
+}
+
+.ex-11-icon:hover{
+    animation: partial_rotate linear;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+}
+
+@keyframes partial_rotate{
+    0%{
+        transform: rotate(0deg);
+    }
+
+    25%{
         transform: rotate(90deg);
     }
 
@@ -117,15 +152,11 @@
     }
 
     100%{
-        transform: rotate(360deg);
+        transform: rotate(0);
     }
-
-
 }
 
-.ex-11-icon {
-    font-size: 60px;
-}
+
 .ex-12-button, .ex-13-button {
     position: relative;
     display: block;
@@ -139,6 +170,8 @@
     text-align: center;
     text-decoration: none;
 }
+
+
 .ex-12-top-white, .ex-13-top-white {
     position: absolute;
     top: -10px;
@@ -146,7 +179,38 @@
     background: #f5f5f5;
     width: 60px;
     height: 20px;
+    
 }
+
+.ex-12-button:hover .ex-12-top-white,
+.ex-12-button:hover .ex-12-bottom-white{
+    animation: contorno linear 1s infinite;
+}
+
+
+@keyframes contorno{
+    0%{
+        left: 0%;
+    }
+
+    25%{
+        left: 20%;
+    }
+
+    50%{
+        left: 40%;
+    }
+
+    75%{
+        left: 60%;
+    }
+
+    100%{
+        left: 80%;
+    }
+
+}
+
 .ex-12-bottom-white, .ex-13-bottom-white {
     position: absolute;
     bottom: -10px;
