--- a/style.css
+++ b/style.css
@@ -33,10 +33,10 @@
     width: 100px;
     height: 100px;
     background: red;
-    transition: background 5s;
+    transition: background 5s;        
 }
 .ex-4-square:hover{
-    background: none;
+    background: none;                
 }
 
 .ex-5-square {
@@ -44,9 +44,20 @@
     width: 60px;
     height: 60px;
     background: red;
-    transition: all 5s;
+    transition: all 2s;
 }
+
 .ex-5-square:hover{
+    transform: scale(2);
+}
+
+.ex-5-square:active{
+    transform: scale(0.5)
+}
+
+/* Problema dimensioni Contenitore
+
+.ex-5-square:hover{ 
     width: 100px;
     height: 100px;
 }
@@ -54,6 +65,7 @@
     width: 30px;
     height: 30px;
 }
+*/
 
 .ex-6-img, .ex-7-img, .ex-8-img {
     width: 500px;
@@ -75,9 +87,21 @@
 
 .ex-8-img:hover{
     filter: hue-rotate(200deg) saturate(200%);
-    border-radius: 5%;
+    border-radius: 2%;
 }
 
+.ex-9-img {
+    margin: 50px 100px;
+    width: 400px;
+    transition: all 3s;
+}
+.ex-9-img:hover{
+    filter: invert(100%) contrast(200%);
+    border-radius: 2%;
+    transform: scale(1.5);
+}
+
+/*Problema dimensioni Contenitore
 .ex-9-img {
     margin: 50px 100px;
     width: 400px;
@@ -89,6 +113,7 @@
     border-radius: 5%;
     width: 200px;
 }
+*/
 
 
 .ex-10-icon {
@@ -125,7 +150,6 @@
 
 .ex-11-icon {
     font-size: 60px;
-    
 }
 
 .ex-11-icon:hover{
@@ -220,9 +244,7 @@
 
 }
 
-.ex-13-button .ex-13-top-white,
-.ex-13-button .ex-13-bottom-white
-{
+.ex-13-button .ex-13-top-white{
     animation: gira linear 5s infinite;
 }
 
@@ -255,7 +277,39 @@
 
 }
 
+.ex-13-button .ex-13-bottom-white{
+    animation: gira_sotto linear 5s infinite;
+}
 
+@keyframes gira_sotto {
+
+    0%{
+        right: -10px;
+        bottom: -10px;
+    }
+
+    25%{
+        right: 100%;
+        bottom: -10px;
+    }
+
+    50%{
+        right: 100%;
+        bottom: 100%;
+    }
+
+    75%{
+        right: -10px; 
+        bottom: 100%;       
+    }
+
+    100%{
+        right: -10px;
+        bottom: -10px;
+    }
+
+    
+}
 
 
 
