--- a/style.css
+++ b/style.css
@@ -215,99 +215,122 @@
     height: 20px;
 }
 
-.ex-12-button .ex-12-top-white,
-.ex-12-button .ex-12-bottom-white{
-    animation: contorno linear 1s infinite;
+.ex-12-button:hover .ex-12-top-white{
+    animation: contorno linear 1s;
+    animation-iteration-count: 1;
 }
 
 
 @keyframes contorno{
     0%{
-        left: 0%;
-    }
-
-    25%{
         left: 20%;
     }
-
+     
     50%{
-        left: 40%;
-    }
-
-    75%{
         left: 60%;
     }
 
     100%{
-        left: 80%;
+        left: 10%;
     }
 
 }
 
-.ex-13-button .ex-13-top-white{
-    animation: gira linear 5s infinite;
+
+.ex-12-button:hover .ex-12-bottom-white{
+    animation: contorno_bottom linear 1s;
+    animation-iteration-count: 1;
+}
+
+@keyframes contorno_bottom{
+    0%{
+        right: 20%;
+    }
+     
+    50%{
+        right: 60%;
+    }
+
+    100%{
+        right: 20%;
+    }
+
+}
+
+.ex-13-button:hover .ex-13-top-white{
+    animation: gira linear 2s;
 }
 
 @keyframes gira{
     0%{
-        left: -10px;
+        left: 10%;
         top: -10px;
     }
 
     25%{
-        left: 100%;
+        left: 75%;
         top: -10px;
     }
 
     50%{
-        left: 100%;
-        top: 100%;
+        left: 75%;
+        top: 80%;
     }
 
     75%{
         left: -10px; 
-        top: 100%;       
+        top: 80%;       
+    }
+
+    90%{
+        left: -15px;
+        top: -10px;
     }
 
     100%{
-        left: -10px;
+        left: 10%;
         top: -10px;
     }
 
 
 }
 
-.ex-13-button .ex-13-bottom-white{
-    animation: gira_sotto linear 5s infinite;
+.ex-13-button:hover .ex-13-bottom-white{
+    animation: gira_sotto linear 2s;
 }
 
 @keyframes gira_sotto {
-
+    
     0%{
-        right: -10px;
-        bottom: -10px;
-    }
-
-    25%{
-        right: 100%;
-        bottom: -10px;
-    }
-
-    50%{
-        right: 100%;
-        bottom: 100%;
-    }
-
-    75%{
-        right: -10px; 
-        bottom: 100%;       
-    }
-
-    100%{
-        right: -10px;
-        bottom: -10px;
-    }
-
+            right: 10%;
+            bottom: -10px;
+        }
+    
+        25%{
+            right: 75%;
+            bottom: -10px;
+        }
+    
+        50%{
+            right: 75%;
+            bottom: 80%;
+        }
+    
+        75%{
+            right: -10px; 
+            bottom: 80%;       
+        }
+    
+        90%{
+            right: -15px;
+            bottom: -10px;
+        }
+    
+        100%{
+            right: 10%;
+            bottom: -10px;
+        }
+    
     
 }
 
